2005-11-16  Sami Wagiaalla  <swagiaal@redhat.com>

	* TrayIcon.java (TrayIcon): Accedintally pasted URL removed :).

2005-11-15  Sami Wagiaalla  <swagiaal@redhat.com>

	* PreferencesWindow.java: Added handle for cancel button.
	* MenuBar.java: Added handel for custom observer item.
	* GuiObject.java: No longer abstract.
	* DynamicWidget.java: New file.
	* CustomeObserverWindow.java: Added handles for managing components.
	Added handlers for varios parts of the window.

2005-11-11  Phil Muldoon  <pmuldoon@redhat.com>

	* ProgramData.java (delete): Added.
	* ProgramViewPage.java (deleteSelectedMonitor): Added.
	(buttonEvent): Added new listener for delete button.
	* ProgramDataModel.java (delete): Added.

2005-11-10  Phil Muldoon  <pmuldoon@redhat.com>

	* ProgramAddWindow.java: Clean up and add comments. Remove
	unused listeners. Removed getSelectedProc.
	* ProgramDataModel.java: Clean up and add javadoc.

2005-11-10  Sami Wagiaalla  <swagiaal@redhat.com>

	* actions/ForkedAction.java: New file.
	* observers/TaskExecObserver.java: Added infrastructor to handle
	customization.
	* observers/ObserverManager.java : Rewrote the sample custom observer. 
	* observers/TaskForkedObserver.java: Removed local filter handling code.
	 Added infrastructor to handle customization.
	* filters/ProcNameFilter.java: Renamed NameProcFilter to this.
	* filters/TaskProcNameFilter.java: New file.
	* filters/FilterPoint.java: Made it extend GuiObject.
	* filters/TaskFilterPoint.java : Made it extend GuiObject. Removed addFilter
	function.
	* filters/ProcFilterPoint.java (ProcFilterPoint): Ditto.
	* actions/Action.java: refactored tooltiop/Name code to GuiObject.
	* observers/ObserverRoot.java: Ditto.
	(ObserverRoot): Initialized filterPoint list.
	* filters/Filter.java: Ditto.
	* GuiObject.java: New file.

2005-11-09  Phil Muldoon  <pmuldoon@redhat.com>

	* ProgramViewPage.java (selectionChangedEvent): Extruded
	tooltip from listener and placed formulation in Data
	Model.